scss/_mobile.scss
// Widescreens
@include mediaXl {
  .projects {
    grid-template-columns: repeat(4, 1fr);
  }
}
// Desktops & laptops
@include mediaLg {
}
// Tablets & small laptops
@include mediaMd {
  main {
    align-items: center;
    text-align: center;

    .lg-heading {
      margin-left: -4rem;
      margin-right: -4rem;
      line-height: 1;
      margin-bottom: 1rem;
      font-size: 3.8rem;
    }
  }
  ul.menu-nav,
  div.menu-branding {
    float: none;
    width: 100%;
    min-height: 0;
  }
  .menu-nav {
    height: 75vh;
    //sliding from the right
    transform: translate3d(100%, 0, 0);
    font-size: 24px;
  }
  .menu-branding {
    height: 25vh;
    //sliding from the left
    transform: translate3d(-100%, 0, 0);
    .portrait {
      background: $portrait-image-small;
      width: 150px;
      height: 150px;
    }
  }
  .about-info {
    grid-template-areas:
      "bioimage"
      "bio"
      "job1"
      "job2"
      "job3";
    grid-template-columns: 1fr;
  }
  .projects {
    grid-template-columns: repeat(2, 1fr);
  }
  #minesweeper-container {
    width: 100%;
  }
  #minesweeper {
    width: 90%;
    grid-template-areas:
      "infos"
      "board"
      "buttons";
    grid-template-columns: 1fr;
    #infos {
      display: flex;
      flex-direction: row;
      justify-content: space-evenly;
      .infos {
        p {
          margin-left: 1rem;
        }
      }
    }
    .button-container {
      margin-top: 2rem;
      position: relative;
      .button {
        margin: 0.5rem 0;
      }
    }
  }
}
// smartphones
@include mediaSm {
  main#home h1 {
    margin-top: 10vh;
  }
  .projects {
    grid-template-columns: 1fr;
  }
  #minesweeper-container {
    width: 100%;
    margin-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    .lg-heading {
      margin: 1rem 0;
    }
  }
  #minesweeper {
    margin-top: 4rem;
    width: 95%;
  }
}

